// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContentArea /> render component when innerBackgroundColor with base 1`] = `
<div
  className="mfui-content-area mfui-content-area_color_transparent"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_color_base"
  >
    some content
  </div>
</div>
`;

exports[`<ContentArea /> render component when innerBackgroundColor with content 1`] = `
<div
  className="mfui-content-area mfui-content-area_color_transparent"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_color_content"
  >
    some content
  </div>
</div>
`;

exports[`<ContentArea /> render component when innerBackgroundColor with green 1`] = `
<div
  className="mfui-content-area mfui-content-area_color_transparent"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_color_green"
  >
    some content
  </div>
</div>
`;

exports[`<ContentArea /> render component when innerBackgroundColor with purple 1`] = `
<div
  className="mfui-content-area mfui-content-area_color_transparent"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_color_purple"
  >
    some content
  </div>
</div>
`;

exports[`<ContentArea /> render component when innerBackgroundColor with spbSky0 1`] = `
<div
  className="mfui-content-area mfui-content-area_color_transparent"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_color_spbSky0"
  >
    some content
  </div>
</div>
`;

exports[`<ContentArea /> render component when innerBackgroundColor with spbSky1 1`] = `
<div
  className="mfui-content-area mfui-content-area_color_transparent"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_color_spbSky1"
  >
    some content
  </div>
</div>
`;

exports[`<ContentArea /> render component when innerBackgroundColor with spbSky2 1`] = `
<div
  className="mfui-content-area mfui-content-area_color_transparent"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_color_spbSky2"
  >
    some content
  </div>
</div>
`;

exports[`<ContentArea /> render component when innerBackgroundColor with transparent 1`] = `
<div
  className="mfui-content-area mfui-content-area_color_transparent"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_color_transparent"
  >
    some content
  </div>
</div>
`;

exports[`<ContentArea /> render component when outerBackgroundColor with base 1`] = `
<div
  className="mfui-content-area mfui-content-area_color_base"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_color_transparent"
  >
    some content
  </div>
</div>
`;

exports[`<ContentArea /> render component when outerBackgroundColor with content 1`] = `
<div
  className="mfui-content-area mfui-content-area_color_content"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_color_transparent"
  >
    some content
  </div>
</div>
`;

exports[`<ContentArea /> render component when outerBackgroundColor with green 1`] = `
<div
  className="mfui-content-area mfui-content-area_color_green"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_color_transparent"
  >
    some content
  </div>
</div>
`;

exports[`<ContentArea /> render component when outerBackgroundColor with purple 1`] = `
<div
  className="mfui-content-area mfui-content-area_color_purple"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_color_transparent"
  >
    some content
  </div>
</div>
`;

exports[`<ContentArea /> render component when outerBackgroundColor with spbSky0 1`] = `
<div
  className="mfui-content-area mfui-content-area_color_spbSky0"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_color_transparent"
  >
    some content
  </div>
</div>
`;

exports[`<ContentArea /> render component when outerBackgroundColor with spbSky1 1`] = `
<div
  className="mfui-content-area mfui-content-area_color_spbSky1"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_color_transparent"
  >
    some content
  </div>
</div>
`;

exports[`<ContentArea /> render component when outerBackgroundColor with spbSky2 1`] = `
<div
  className="mfui-content-area mfui-content-area_color_spbSky2"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_color_transparent"
  >
    some content
  </div>
</div>
`;

exports[`<ContentArea /> render component when outerBackgroundColor with transparent 1`] = `
<div
  className="mfui-content-area mfui-content-area_color_transparent"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_color_transparent"
  >
    some content
  </div>
</div>
`;

exports[`<ContentArea /> renders correctly with custom props 1`] = `
<div
  className="mfui-content-area mfui-content-area_color_base className rootClass"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_disable-indents_all mfui-content-area__inner_color_base innerClass"
  >
    <span>
      child
    </span>
  </div>
</div>
`;

exports[`<ContentArea /> renders correctly with default props 1`] = `
<div
  className="mfui-content-area mfui-content-area_color_transparent"
>
  <div
    className="mfui-content-area__inner mfui-content-area__inner_color_transparent"
  >
    <span>
      child
    </span>
  </div>
</div>
`;
